376
"May you not be angry, but let me speak just once more." I think the mystery is solved. The compilation failure only occurs when the whole example is compiled as a single source file.



Reproducing the failure:

I downloaded a new snapshot (15286-b20080607010057.tgz), used a new machine and operating system (opensolaris), re-typed the example.

{code}
package b {
    class B
}

package a.b {
    class A {
        val x = new _root_.b.B
    }
}
{code}

{code}
JAVA_HOME=/usr/jdk/latest
JAVACMD=${JAVA_HOME}/bin/java
SCALA_HOME=/tmp/scala-2.7.1.r15286-b20080607010057
PATH=${SCALA_HOME}/bin:${JAVA_HOME}/bin:$PATH
export JAVA_HOME
export JAVACMD
export SCALA_HOME
export PATH

uname -a
java -version
scala -version
scalac -version
scalac Test931.scala
{code}

{code}
$ uname -a
SunOS buffy 5.10 Generic_127112-11 i86pc i386 i86pc
$ java -version
java version "1.6.0_06"
Java(TM) SE Runtime Environment (build 1.6.0_06-b02)
Java HotSpot(TM) Client VM (build 10.0-b22, mixed mode, sharing)
$ scala -version
Scala code runner version 2.7.1.r15286-b20080607010057 -- Copyright 2002-2008, LAMP/EPFL
$ scalac -version
Scala compiler version 2.7.1.r15286-b20080607010057 -- Copyright 2002-2008, LAMP/EPFL
$ scalac Test931.scala
Test931.scala:8: error: value b is not a member of package <root>
        val x = new _root_.b.B
                           ^
one error found
{code}



If I split Test931.scala into two source files, and either compile them on the one command line or compile the "package b" source file first, no compilation error occurs.

